packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/analyze_repository_preserves_import_backed_package_attributes.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
[
  {
    "attributes": {
      "dependency_form": "qualified_import",
      "dependency_local_name": "Math",
      "dependency_target": "Modelica.Math"
    },
    "import_name": "Math",
    "kind": "Symbol",
    "line_start": 4,
    "module_id": "repo:mcl:module:Modelica.Blocks",
    "resolved_id": null,
    "source_module": "Modelica.Math",
    "target_package": "Modelica"
  },
  {
    "attributes": {
      "dependency_form": "unqualified_import",
      "dependency_local_name": "Math",
      "dependency_target": "Modelica.Math"
    },
    "import_name": "Math",
    "kind": "Module",
    "line_start": 5,
    "module_id": "repo:mcl:module:Modelica.Blocks",
    "resolved_id": null,
    "source_module": "Modelica.Math",
    "target_package": "Modelica"
  },
  {
    "attributes": {
      "dependency_alias": "SI",
      "dependency_form": "named_import",
      "dependency_local_name": "SI",
      "dependency_target": "Modelica.Units.SI"
    },
    "import_name": "SI",
    "kind": "Module",
    "line_start": 3,
    "module_id": "repo:mcl:module:Modelica.Blocks",
    "resolved_id": null,
    "source_module": "Modelica.Units.SI",
    "target_package": "Modelica"
  }
]
