packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/detects_nested_users_guide_topics_from_conventions_files.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
{
  "conventions": [
    {
      "format": "modelica_users_guide_documentation",
      "title": "Documentation"
    },
    {
      "format": "modelica_users_guide_modelica_code",
      "title": "ModelicaCode"
    },
    {
      "format": "modelica_users_guide_icons",
      "title": "Icons"
    }
  ],
  "non_conventions": []
}
