packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/doc_sort_key_uses_package_order_and_annotation_position.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
[
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/package.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        0,
        "Tutorial"
      ],
      [
        0,
        "Tutorial"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/Tutorial/package.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        0,
        "Tutorial"
      ],
      [
        1,
        "FirstSteps"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        0,
        "Tutorial"
      ],
      [
        1,
        "FirstSteps"
      ],
      [
        2,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        18446744073709551615,
        "Conventions"
      ],
      [
        1,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/Conventions.mo#section.Documentation"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        2,
        "References"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/References.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        3,
        "ReleaseNotes"
      ],
      [
        1,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/ReleaseNotes.mo#section.VersionManagement"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        3,
        "ReleaseNotes"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/ReleaseNotes.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "Controllers"
      ],
      [
        0,
        "UsersGuide"
      ],
      [
        4,
        "Tuning"
      ],
      [
        0,
        ""
      ]
    ],
    "path": "Controllers/UsersGuide/Tuning.mo"
  }
]
