packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/infers_users_guide_doc_formats.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
[
  {
    "annotation_format": "modelica_users_guide_page_annotation",
    "file_format": "modelica_users_guide_page",
    "path": "Controllers/UsersGuide/package.mo"
  },
  {
    "annotation_format": "modelica_users_guide_conventions_annotation",
    "file_format": "modelica_users_guide_conventions",
    "path": "Controllers/UsersGuide/Conventions.mo"
  },
  {
    "annotation_format": "modelica_users_guide_connectors_annotation",
    "file_format": "modelica_users_guide_connectors",
    "path": "Controllers/UsersGuide/Connectors.mo"
  },
  {
    "annotation_format": "modelica_users_guide_implementation_annotation",
    "file_format": "modelica_users_guide_implementation",
    "path": "Controllers/UsersGuide/Implementation.mo"
  },
  {
    "annotation_format": "modelica_users_guide_revision_history_annotation",
    "file_format": "modelica_users_guide_revision_history",
    "path": "Controllers/UsersGuide/RevisionHistory.mo"
  },
  {
    "annotation_format": "modelica_users_guide_version_management_annotation",
    "file_format": "modelica_users_guide_version_management",
    "path": "Controllers/UsersGuide/VersionManagement.mo"
  },
  {
    "annotation_format": "modelica_users_guide_tutorial_annotation",
    "file_format": "modelica_users_guide_tutorial",
    "path": "Controllers/UsersGuide/Tutorial/package.mo"
  },
  {
    "annotation_format": "modelica_users_guide_tutorial_annotation",
    "file_format": "modelica_users_guide_tutorial",
    "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo"
  },
  {
    "annotation_format": "modelica_users_guide_release_notes_annotation",
    "file_format": "modelica_users_guide_release_notes",
    "path": "Controllers/UsersGuide/ReleaseNotes.mo"
  },
  {
    "annotation_format": "modelica_users_guide_reference_annotation",
    "file_format": "modelica_users_guide_reference",
    "path": "Controllers/UsersGuide/References.mo"
  },
  {
    "annotation_format": "modelica_users_guide_contact_annotation",
    "file_format": "modelica_users_guide_contact",
    "path": "Controllers/UsersGuide/Contact.mo"
  },
  {
    "annotation_format": "modelica_users_guide_concept_annotation",
    "file_format": "modelica_users_guide_concept",
    "path": "Controllers/UsersGuide/Concept.mo"
  },
  {
    "annotation_format": "modelica_users_guide_parameter_annotation",
    "file_format": "modelica_users_guide_parameter",
    "path": "Controllers/UsersGuide/Parameters.mo"
  },
  {
    "annotation_format": "modelica_users_guide_overview_annotation",
    "file_format": "modelica_users_guide_overview",
    "path": "UsersGuide/Overview.mo"
  },
  {
    "annotation_format": "modelica_users_guide_conventions_annotation",
    "file_format": "modelica_users_guide_conventions",
    "path": "UsersGuide/Conventions.mo"
  },
  {
    "annotation_format": "modelica_users_guide_connectors_annotation",
    "file_format": "modelica_users_guide_connectors",
    "path": "UsersGuide/Connectors.mo"
  },
  {
    "annotation_format": "modelica_users_guide_implementation_annotation",
    "file_format": "modelica_users_guide_implementation",
    "path": "UsersGuide/Implementation.mo"
  },
  {
    "annotation_format": "modelica_users_guide_revision_history_annotation",
    "file_format": "modelica_users_guide_revision_history",
    "path": "UsersGuide/RevisionHistory.mo"
  },
  {
    "annotation_format": "modelica_users_guide_version_management_annotation",
    "file_format": "modelica_users_guide_version_management",
    "path": "UsersGuide/VersionManagement.mo"
  },
  {
    "annotation_format": "modelica_users_guide_reference_annotation",
    "file_format": "modelica_users_guide_reference",
    "path": "UsersGuide/Literature.mo"
  },
  {
    "annotation_format": "modelica_users_guide_glossary_annotation",
    "file_format": "modelica_users_guide_glossary",
    "path": "UsersGuide/Glossar.mo"
  },
  {
    "annotation_format": "modelica_users_guide_parameter_annotation",
    "file_format": "modelica_users_guide_parameter",
    "path": "UsersGuide/Parameterization.mo"
  }
]
