packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/parse_symbol_declarations_supports_secondary_keywords.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
[
  {
    "equations_count": 0,
    "kind": "Type",
    "line_start": 4,
    "name": "ControllerState",
    "signature": "record ControllerState"
  },
  {
    "equations_count": 0,
    "kind": "Type",
    "line_start": 7,
    "name": "GainHolder",
    "signature": "model GainHolder"
  },
  {
    "equations_count": 0,
    "kind": "Type",
    "line_start": 11,
    "name": "Limiter",
    "signature": "block Limiter"
  }
]
