packages/rust/crates/xiuxian-julia-core/tests/unit/plugin/snapshots/repository_snapshot_preloads_modelica_entries_and_package_orders.snap
---
source: packages/rust/crates/xiuxian-julia-core/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
{
  "entries": [
    {
      "has_modelica_contents": true,
      "relative_path": "Blocks/package.mo",
      "surface": "api"
    },
    {
      "has_modelica_contents": false,
      "relative_path": "Blocks/package.order",
      "surface": "api"
    },
    {
      "has_modelica_contents": false,
      "relative_path": "README.md",
      "surface": "api"
    },
    {
      "has_modelica_contents": true,
      "relative_path": "package.mo",
      "surface": "api"
    }
  ],
  "package_files": [
    "Blocks/package.mo",
    "package.mo"
  ],
  "package_orders": {
    "Blocks": [
      "Interfaces",
      "Utilities"
    ]
  }
}
